--- a/CRUD - todo/package.json
+++ b/CRUD - todo/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "newfetch",
+  "name": "setupnpm",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "json-server": "^1.0.0-beta.1"
+    "json-server": "^1.0.0-beta.3"
   }
 }
